kubernetes-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: zuriapp-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zuriapp-backend
  template:
    metadata:
      labels:
        app: zuriapp-backend
    spec:
      containers:
      - name: zuriapp-backend
        image: munirihzowe/zuriapp-backend:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
          - name: secrets-store
            mountPath: "/mnt/secrets"
            readOnly: true

    volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "zuri-secrets"
