kubernetes-manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: zuriapp-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zuriapp-frontend
  template:
    metadata:
      labels:
        app: zuriapp-frontend
    spec:
      containers:
      - name: zuriapp-frontend
        image: zuriapp-frontend:latest
        ports:
        - containerPort: 80
